# CMG_PM_Tool

./: .env.example  .gitignore  README.md  docker-compose.yml  frontend-server.js
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260316_0001_initial.py  20260316_0002_column_kinds_views.py  20260316_0003_view_preferences.py  20260317_0004_recurring_tasks.py  20260318_0005_project_view_constraints.py
backend/app/: __init__.py  db.py  main.py  migrations.py  models.py  schemas.py
backend/app/api/routes/: comments.py  dashboard.py  labels.py  meta.py  projects.py  tasks.py
backend/app/core/: config.py
backend/app/services/: activity.py  board.py  recurrence.py  seed.py
backend/tests/: conftest.py  test_api.py
docs/: 2026-03-17-change-review.md  2026-03-18-dashboard-views-review.md  2026-03-18-github-release-text.md  2026-03-18-mobile-layout-review.md  2026-03-18-release-note.md  2026-03-18-ship-readiness-pass.md  api.md  architecture.md  data-model.md  deployment-mac-mini.md  setup.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  comments.ts  dashboard.ts  labels.ts  meta.ts  projects.ts  tasks.ts
frontend/src/lib/: hooks.ts  taskFilters.ts  utils.ts
frontend/src/pages/: DashboardPage.tsx  KanbanPage.tsx  ProjectsPage.tsx  SettingsPage.tsx
scripts/: deploy-mac-mini.sh  start-dev.ps1  start-dev.sh  start-e2e.ps1  start-e2e.sh
(+43 files in other folders)
